<resources>
    <string name="app_name">FaceMeetroom</string>
    <string name="create_account">CREATE_ACCOUNT</string>
    <string name="sign_in">SIGN_IN</string>
    <string name="account">account</string>
    <string name="password">password</string>
    <string name="remeber_password">Keep Me Logged In</string>
    <string name="running_get_faceData">getting Face FeatureData now</string>
    <string name="get_success">get Face FeatureData success</string>
    <string name="get_failed">get Face FeatureData failed,please call we</string>
    <string name="register_failed">register failed,please call we</string>
    <string name="register_success">register success</string>
    <string name="get_picture_failed">failed to get picture!</string>
    <string name="go">Go !</string>
    <string name="finish_rigister">finish</string>
    <string name="active_success">active success</string>
    <string name="active_failed">active failed,code is %d</string>
    <string name="init_failed">init failed,code is %d</string>
    <string name="permission_denied">permission denied!</string>
    <string name="username_empty">The user name is empty, please re-enter it!</string>
    <string name="username_beyond">用户名超过10位，请重新输入</string>
    <string name="password_empty">The password is empty, please re-enter it!</string>
    <string name="password_check_empty">The password is confirmed to be empty, please re-enter it</string>
    <string name="password_equal">The two passwords are not the same</string>
    <string name="sex_empty">Please select gender</string>
    <string name="email_empty">Please enter email address</string>
    <string name="email_error">Email format error! Please re-enter</string>
    <string name="age_empty">Please enter age</string>
    <string name="logout_success">Logout successful!</string>
    <string name="logout_failed">Logout failed! Please contact us</string>
    <string name="visit_failed">Access failed! Please contact us</string>
    <string name="info_title">Intelligent conference room ICR</string>
    <string name="up_head">upload head photo</string>
    <string name="cancel_room_success">cancel success</string>
    <string name="cancel_room_failed">cancel failed</string>
    <string name="please_choose">please choose</string>
    <string name="username">Username</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_password_again">Please enter password again</string>
    <string name="admin_login">管理员不可登录！</string>
    <string name="login_failed">用户名或者密码错误！</string>
    <string name="email_layout_error">email layout error！please revise！</string>
    <string name="email_repetition">email repetition！please revise！</string>
    <string name="sex">Sex</string>
    <string name="male">male</string>
    <string name="female">Female</string>
    <string name="secrecy">privary</string>
    <string name="email">email</string>
    <string name="age">age</string>
    <string name="username_duplicate">用户名重复！请修改</string>
    <string name="email_duplicate">email error！</string>
    <string name="face_register_tx">进行人脸注册</string>
    <string name="information">Information</string>
    <string name="contacts">Contacts</string>
    <string name="me">Me</string>
    <string name="information_changes">info changes</string>
    <string name="password_changes_tx">password changes</string>
    <string name="room_changes_tx">room changes</string>
    <string name="logout">Logout</string>
    <string name="scan">Scan</string>
    <string name="ed_password">edit_password</string>
    <string name="look_detail">View details</string>
    <string name="user">user</string>
    <string name="mine">Mine</string>
    <string name="please_room_number">Please enter your room number</string>
    <string name="search">Search</string>
    <string name="search_result">Search Result</string>
    <string name="category_result_failed">获取通讯录失败！</string>
    <string name="content">Content</string>
    <string name="people">People</string>
    <string name="reserve">Reserve</string>
    <string name="all_choice">All choice</string>
    <string name="not_all_choice">Not All Choice</string>
    <string name="please_input_old_password">请输入老密码</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="please_input_new_password_again">请再次输入新密码</string>
    <string name="new_old_password_error">两次输入的新密码不一致，请重新输入！</string>
    <string name="booked_details">booked details</string>



    <string name="title_activity_scan_qr_code">扫一扫</string>
    <string name="qc_code_close">关闭</string>
    <string name="qr_code_select_picture">照片</string>
    <string name="qr_code_open_flash_light">打开闪光灯</string>
    <string name="qr_code_close_flash_light">关闭闪光灯</string>
    <string name="qr_code_auto_scan_notification">将二维码放入框内，即可自动扫描</string>
    <string name="qr_code_notification">提示</string>
    <string name="qr_code_camera_not_open">您的相机功能好像没有打开哦~去\"设置>隐私>相机\"设置一下吧</string>
    <string name="qr_code_positive_button_know">知道了</string>
    <string name="qr_code_positive_button_confirm">确认</string>
    <string name="qr_code_could_not_read_qr_code_from_picture">没有读出图片中的链接，换张图片试试吧~</string>
    <string name="qr_code_could_not_read_qr_code_from_scanner">对不起，无法打开扫出的内容</string>
    <string name="qr_code_camera_not_found">未检测到相机</string>
    <string name="please_face_register">please face register</string>

    <string name="cancel">取消</string>
    <string name="title">请选择时间</string>
    <string name="confirm">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="select_date">选择日期</string>
    <string name="current_date">当前选择的日期</string>

    <string name="modify_success">modify success!</string>
    <string name="modify_fail">modify failed!</string>
</resources>
