<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserinfoActivity">


    <android.support.v4.view.ViewPager
        android:layout_weight="1"
        android:id="@+id/vp"
        android:layout_width="match_parent"
        android:layout_height="0dp"></android.support.v4.view.ViewPager>

    <LinearLayout
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#eee"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:elevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/ll_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.example.harbour.facemeetroom.widget.MyImageView
                android:id="@+id/iv1"
                android:layout_width="@dimen/tab_image_weith"
                android:layout_height="@dimen/tab_image_heigh"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/rb1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:button="@null"
                android:textSize="10dp"
                android:gravity="center"
                android:text="@string/information" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_categroy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.example.harbour.facemeetroom.widget.MyImageView
                android:id="@+id/iv2"
                android:layout_width="@dimen/tab_image_weith"
                android:layout_height="@dimen/tab_image_heigh"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/rb2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:button="@null"
                android:gravity="center"
                android:textSize="10dp"
                android:text="@string/contacts" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.example.harbour.facemeetroom.widget.MyImageView
                android:id="@+id/iv3"
                android:layout_width="@dimen/tab_image_weith"
                android:layout_height="@dimen/tab_image_heigh"
                android:layout_gravity="center" />


            <TextView
                android:id="@+id/rb3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:button="@null"
                android:gravity="center"
                android:textSize="10dp"
                android:text="@string/me" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>